# ssm1d

./: .gitignore  README.md  pyproject.toml
ssm1d/: __init__.py  atm.py  core.py
ssm1d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
